y.output
Rules never reduced

   29 @9: /* empty */

   81 @41: /* empty */

   91 @48: /* empty */


State 1 conflicts: 1 reduce/reduce
State 2 conflicts: 1 reduce/reduce
State 16 conflicts: 1 reduce/reduce
State 76 conflicts: 1 reduce/reduce
State 214 conflicts: 1 reduce/reduce


Grammar

    0 $accept: stmt_list $end

    1 stmt_list: stmt stmt_list

    2 @1: /* empty */

    3 @2: /* empty */

    4 stmt_list: LBRACE @1 stmt_list RBRACE @2 stmt_list
    5          | /* empty */

    6 stmt: if_stmt
    7     | while_stmt
    8     | repeat_stmt
    9     | for_stmt
   10     | switch_stmt
   11     | func_decl
   12     | var_decl
   13     | const_decl
   14     | assignment_stmt
   15     | expr SEMICOLON
   16     | return_stmt SEMICOLON
   17     | BREAK SEMICOLON
   18     | CONTINUE SEMICOLON

   19 @3: /* empty */

   20 return_stmt: RETURN @3

   21 @4: /* empty */

   22 return_stmt: RETURN @4 TERM

   23 @5: /* empty */

   24 return_stmt: RETURN @5 expr

   25 @6: /* empty */

   26 @7: /* empty */

   27 @8: /* empty */

   28 if_stmt: IF @6 LPAREN expr RPAREN LBRACE @7 stmt_list RBRACE @8

   29 @9: /* empty */

   30 @10: /* empty */

   31 @11: /* empty */

   32 @12: /* empty */

   33 @13: /* empty */

   34 @14: /* empty */

   35 if_stmt: IF @9 LPAREN expr RPAREN LBRACE @10 stmt_list RBRACE @11 ELSE @12 LBRACE @13 stmt_list RBRACE @14

   36 @15: /* empty */

   37 @16: /* empty */

   38 while_stmt: WHILE @15 LPAREN expr RPAREN LBRACE @16 stmt_list RBRACE

   39 @17: /* empty */

   40 @18: /* empty */

   41 @19: /* empty */

   42 @20: /* empty */

   43 repeat_stmt: REPEAT @17 LBRACE @18 stmt_list RBRACE @19 UNTIL @20 LPAREN expr RPAREN SEMICOLON

   44 @21: /* empty */

   45 @22: /* empty */

   46 @23: /* empty */

   47 @24: /* empty */

   48 @25: /* empty */

   49 for_stmt: FOR @21 LPAREN var_decl expr SEMICOLON IDENTIFIER @22 ASSIGN @23 expr RPAREN LBRACE @24 stmt_list RBRACE @25

   50 @26: /* empty */

   51 @27: /* empty */

   52 @28: /* empty */

   53 switch_stmt: SWITCH @26 LPAREN expr RPAREN LBRACE @27 case_list RBRACE @28

   54 @29: /* empty */

   55 case_list: CASE @29 expr COLON stmt_list case_list

   56 @30: /* empty */

   57 case_list: CASE @30 TERM COLON stmt_list case_list

   58 @31: /* empty */

   59 case_list: DEFAULT @31 COLON stmt_list

   60 @32: /* empty */

   61 @33: /* empty */

   62 @34: /* empty */

   63 func_decl: DATATYPE IDENTIFIER @32 LPAREN dec_param_list RPAREN LBRACE @33 stmt_list RBRACE @34

   64 @35: /* empty */

   65 func_call: IDENTIFIER @35 LPAREN call_param_list RPAREN
   66          | /* empty */

   67 @36: /* empty */

   68 dec_param_list: DATATYPE IDENTIFIER @36 COMMA dec_param_list

   69 @37: /* empty */

   70 dec_param_list: DATATYPE IDENTIFIER @37
   71               | /* empty */

   72 call_param_list: expr COMMA call_param_list
   73                | expr
   74                | TERM COMMA call_param_list
   75                | TERM

   76 @38: /* empty */

   77 var_decl: DATATYPE IDENTIFIER @38 SEMICOLON

   78 @39: /* empty */

   79 @40: /* empty */

   80 var_decl: DATATYPE IDENTIFIER @39 ASSIGN @40 TERM SEMICOLON

   81 @41: /* empty */

   82 @42: /* empty */

   83 var_decl: DATATYPE IDENTIFIER @41 ASSIGN @42 expr SEMICOLON

   84 @43: /* empty */

   85 @44: /* empty */

   86 @45: /* empty */

   87 const_decl: CONST @43 DATATYPE IDENTIFIER @44 ASSIGN @45 TERM SEMICOLON

   88 @46: /* empty */

   89 @47: /* empty */

   90 assignment_stmt: IDENTIFIER @46 ASSIGN @47 TERM SEMICOLON

   91 @48: /* empty */

   92 @49: /* empty */

   93 assignment_stmt: IDENTIFIER @48 ASSIGN @49 expr SEMICOLON

   94 @50: /* empty */

   95 @51: /* empty */

   96 expr: expr EQ @50 IDENTIFIER @51

   97 @52: /* empty */

   98 @53: /* empty */

   99 expr: expr NEQ @52 IDENTIFIER @53

  100 @54: /* empty */

  101 @55: /* empty */

  102 expr: expr LT @54 IDENTIFIER @55

  103 @56: /* empty */

  104 @57: /* empty */

  105 expr: expr GT @56 IDENTIFIER @57

  106 @58: /* empty */

  107 @59: /* empty */

  108 expr: expr LEQ @58 IDENTIFIER @59

  109 @60: /* empty */

  110 @61: /* empty */

  111 expr: expr GEQ @60 IDENTIFIER @61

  112 @62: /* empty */

  113 @63: /* empty */

  114 expr: expr DIVIDE @62 IDENTIFIER @63

  115 @64: /* empty */

  116 @65: /* empty */

  117 expr: expr TIMES @64 IDENTIFIER @65

  118 @66: /* empty */

  119 @67: /* empty */

  120 expr: expr MINUS @66 IDENTIFIER @67

  121 @68: /* empty */

  122 @69: /* empty */

  123 expr: expr PLUS @68 IDENTIFIER @69

  124 @70: /* empty */

  125 @71: /* empty */

  126 expr: UNARY @70 IDENTIFIER @71

  127 @72: /* empty */

  128 @73: /* empty */

  129 expr: IDENTIFIER @72 UNARY @73

  130 @74: /* empty */

  131 expr: expr PLUS @74 TERM

  132 @75: /* empty */

  133 expr: expr MINUS @75 TERM

  134 @76: /* empty */

  135 expr: expr TIMES @76 TERM

  136 @77: /* empty */

  137 expr: expr DIVIDE @77 TERM

  138 @78: /* empty */

  139 expr: expr EQ @78 TERM

  140 @79: /* empty */

  141 expr: expr NEQ @79 TERM

  142 @80: /* empty */

  143 expr: expr LT @80 TERM

  144 @81: /* empty */

  145 expr: expr GT @81 TERM

  146 @82: /* empty */

  147 expr: expr LEQ @82 TERM

  148 @83: /* empty */

  149 expr: expr GEQ @83 TERM

  150 @84: /* empty */

  151 expr: expr POWER @84 TERM

  152 @85: /* empty */

  153 expr: expr AND @85 TERM

  154 @86: /* empty */

  155 expr: expr OR @86 TERM

  156 @87: /* empty */

  157 expr: NOT @87 TERM
  158     | LPAREN expr RPAREN

  159 @88: /* empty */

  160 expr: expr PLUS @88 LPAREN expr RPAREN

  161 @89: /* empty */

  162 expr: expr MINUS @89 LPAREN expr RPAREN

  163 @90: /* empty */

  164 expr: expr TIMES @90 LPAREN expr RPAREN

  165 @91: /* empty */

  166 expr: expr DIVIDE @91 LPAREN expr RPAREN

  167 @92: /* empty */

  168 expr: expr EQ @92 LPAREN expr RPAREN

  169 @93: /* empty */

  170 expr: expr NEQ @93 LPAREN expr RPAREN

  171 @94: /* empty */

  172 expr: expr LT @94 LPAREN expr RPAREN

  173 @95: /* empty */

  174 expr: expr GT @95 LPAREN expr RPAREN

  175 @96: /* empty */

  176 expr: expr LEQ @96 LPAREN expr RPAREN

  177 @97: /* empty */

  178 expr: expr GEQ @97 LPAREN expr RPAREN

  179 @98: /* empty */

  180 expr: expr POWER @98 LPAREN expr RPAREN

  181 @99: /* empty */

  182 expr: expr AND @99 LPAREN expr RPAREN

  183 @100: /* empty */

  184 expr: expr OR @100 LPAREN expr RPAREN
  185     | NOT LPAREN expr RPAREN

  186 @101: /* empty */

  187 expr: IDENTIFIER @101
  188     | func_call

  189 @102: /* empty */

  190 TERM: NUMBER @102

  191 @103: /* empty */

  192 TERM: TRUE @103

  193 @104: /* empty */

  194 TERM: FALSE @104

  195 @105: /* empty */

  196 TERM: CHARACTER_LITERAL @105

  197 @106: /* empty */

  198 TERM: STRING_LITERAL @106

  199 @107: /* empty */

  200 TERM: FLOATING_NUMBER @107

  201 DATATYPE: INT
  202         | BOOL
  203         | CHAR
  204         | STRING
  205         | FLOAT
  206         | VOID


Terminals, with rules where they appear

$end (0) 0
error (256)
NUMBER (258) 190
FLOATING_NUMBER (259) 200
STRING_LITERAL (260) 198
IDENTIFIER (261) 49 63 65 68 70 77 80 83 87 90 93 96 99 102 105 108
    111 114 117 120 123 126 129 187
CHARACTER_LITERAL (262) 196
TRUE (263) 192
FALSE (264) 194
COMMA (265) 68 72 74
IF (266) 28 35
ELSE (267) 35
WHILE (268) 38
REPEAT (269) 43
UNTIL (270) 43
FOR (271) 49
SWITCH (272) 53
CASE (273) 55 57
BREAK (274) 17
CONTINUE (275) 18
CONST (276) 87
INT (277) 201
FLOAT (278) 205
BOOL (279) 202
STRING (280) 204
CHAR (281) 203
VOID (282) 206
RETURN (283) 20 22 24
DEFAULT (284) 59
EQ (285) 96 139 168
NEQ (286) 99 141 170
LT (287) 102 143 172
GT (288) 105 145 174
LEQ (289) 108 147 176
GEQ (290) 111 149 178
PLUS (291) 123 131 160
MINUS (292) 120 133 162
TIMES (293) 117 135 164
DIVIDE (294) 114 137 166
ASSIGN (295) 49 80 83 87 90 93
LPAREN (296) 28 35 38 43 49 53 63 65 158 160 162 164 166 168 170 172
    174 176 178 180 182 184 185
RPAREN (297) 28 35 38 43 49 53 63 65 158 160 162 164 166 168 170 172
    174 176 178 180 182 184 185
LBRACE (298) 4 28 35 38 43 49 53 63
RBRACE (299) 4 28 35 38 43 49 53 63
SEMICOLON (300) 15 16 17 18 43 49 77 80 83 87 90 93
COLON (301) 55 57 59
POWER (302) 151 180
UNARY (303) 126 129
AND (304) 153 182
OR (305) 155 184
NOT (306) 157 185
UMINUS (307)


Nonterminals, with rules where they appear

$accept (53)
    on left: 0
stmt_list (54)
    on left: 1 4 5, on right: 0 1 4 28 35 38 43 49 55 57 59 63
@1 (55)
    on left: 2, on right: 4
@2 (56)
    on left: 3, on right: 4
stmt (57)
    on left: 6 7 8 9 10 11 12 13 14 15 16 17 18, on right: 1
return_stmt (58)
    on left: 20 22 24, on right: 16
@3 (59)
    on left: 19, on right: 20
@4 (60)
    on left: 21, on right: 22
@5 (61)
    on left: 23, on right: 24
if_stmt (62)
    on left: 28 35, on right: 6
@6 (63)
    on left: 25, on right: 28
@7 (64)
    on left: 26, on right: 28
@8 (65)
    on left: 27, on right: 28
@9 (66)
    on left: 29, on right: 35
@10 (67)
    on left: 30, on right: 35
@11 (68)
    on left: 31, on right: 35
@12 (69)
    on left: 32, on right: 35
@13 (70)
    on left: 33, on right: 35
@14 (71)
    on left: 34, on right: 35
while_stmt (72)
    on left: 38, on right: 7
@15 (73)
    on left: 36, on right: 38
@16 (74)
    on left: 37, on right: 38
repeat_stmt (75)
    on left: 43, on right: 8
@17 (76)
    on left: 39, on right: 43
@18 (77)
    on left: 40, on right: 43
@19 (78)
    on left: 41, on right: 43
@20 (79)
    on left: 42, on right: 43
for_stmt (80)
    on left: 49, on right: 9
@21 (81)
    on left: 44, on right: 49
@22 (82)
    on left: 45, on right: 49
@23 (83)
    on left: 46, on right: 49
@24 (84)
    on left: 47, on right: 49
@25 (85)
    on left: 48, on right: 49
switch_stmt (86)
    on left: 53, on right: 10
@26 (87)
    on left: 50, on right: 53
@27 (88)
    on left: 51, on right: 53
@28 (89)
    on left: 52, on right: 53
case_list (90)
    on left: 55 57 59, on right: 53 55 57
@29 (91)
    on left: 54, on right: 55
@30 (92)
    on left: 56, on right: 57
@31 (93)
    on left: 58, on right: 59
func_decl (94)
    on left: 63, on right: 11
@32 (95)
    on left: 60, on right: 63
@33 (96)
    on left: 61, on right: 63
@34 (97)
    on left: 62, on right: 63
func_call (98)
    on left: 65 66, on right: 188
@35 (99)
    on left: 64, on right: 65
dec_param_list (100)
    on left: 68 70 71, on right: 63 68
@36 (101)
    on left: 67, on right: 68
@37 (102)
    on left: 69, on right: 70
call_param_list (103)
    on left: 72 73 74 75, on right: 65 72 74
var_decl (104)
    on left: 77 80 83, on right: 12 49
@38 (105)
    on left: 76, on right: 77
@39 (106)
    on left: 78, on right: 80
@40 (107)
    on left: 79, on right: 80
@41 (108)
    on left: 81, on right: 83
@42 (109)
    on left: 82, on right: 83
const_decl (110)
    on left: 87, on right: 13
@43 (111)
    on left: 84, on right: 87
@44 (112)
    on left: 85, on right: 87
@45 (113)
    on left: 86, on right: 87
assignment_stmt (114)
    on left: 90 93, on right: 14
@46 (115)
    on left: 88, on right: 90
@47 (116)
    on left: 89, on right: 90
@48 (117)
    on left: 91, on right: 93
@49 (118)
    on left: 92, on right: 93
expr (119)
    on left: 96 99 102 105 108 111 114 117 120 123 126 129 131 133
    135 137 139 141 143 145 147 149 151 153 155 157 158 160 162 164
    166 168 170 172 174 176 178 180 182 184 185 187 188,
    on right: 15 24 28 35 38 43 49 53 55 72 73 83 93 96 99 102 105
    108 111 114 117 120 123 131 133 135 137 139 141 143 145 147 149
    151 153 155 158 160 162 164 166 168 170 172 174 176 178 180 182
    184 185
@50 (120)
    on left: 94, on right: 96
@51 (121)
    on left: 95, on right: 96
@52 (122)
    on left: 97, on right: 99
@53 (123)
    on left: 98, on right: 99
@54 (124)
    on left: 100, on right: 102
@55 (125)
    on left: 101, on right: 102
@56 (126)
    on left: 103, on right: 105
@57 (127)
    on left: 104, on right: 105
@58 (128)
    on left: 106, on right: 108
@59 (129)
    on left: 107, on right: 108
@60 (130)
    on left: 109, on right: 111
@61 (131)
    on left: 110, on right: 111
@62 (132)
    on left: 112, on right: 114
@63 (133)
    on left: 113, on right: 114
@64 (134)
    on left: 115, on right: 117
@65 (135)
    on left: 116, on right: 117
@66 (136)
    on left: 118, on right: 120
@67 (137)
    on left: 119, on right: 120
@68 (138)
    on left: 121, on right: 123
@69 (139)
    on left: 122, on right: 123
@70 (140)
    on left: 124, on right: 126
@71 (141)
    on left: 125, on right: 126
@72 (142)
    on left: 127, on right: 129
@73 (143)
    on left: 128, on right: 129
@74 (144)
    on left: 130, on right: 131
@75 (145)
    on left: 132, on right: 133
@76 (146)
    on left: 134, on right: 135
@77 (147)
    on left: 136, on right: 137
@78 (148)
    on left: 138, on right: 139
@79 (149)
    on left: 140, on right: 141
@80 (150)
    on left: 142, on right: 143
@81 (151)
    on left: 144, on right: 145
@82 (152)
    on left: 146, on right: 147
@83 (153)
    on left: 148, on right: 149
@84 (154)
    on left: 150, on right: 151
@85 (155)
    on left: 152, on right: 153
@86 (156)
    on left: 154, on right: 155
@87 (157)
    on left: 156, on right: 157
@88 (158)
    on left: 159, on right: 160
@89 (159)
    on left: 161, on right: 162
@90 (160)
    on left: 163, on right: 164
@91 (161)
    on left: 165, on right: 166
@92 (162)
    on left: 167, on right: 168
@93 (163)
    on left: 169, on right: 170
@94 (164)
    on left: 171, on right: 172
@95 (165)
    on left: 173, on right: 174
@96 (166)
    on left: 175, on right: 176
@97 (167)
    on left: 177, on right: 178
@98 (168)
    on left: 179, on right: 180
@99 (169)
    on left: 181, on right: 182
@100 (170)
    on left: 183, on right: 184
@101 (171)
    on left: 186, on right: 187
TERM (172)
    on left: 190 192 194 196 198 200, on right: 22 57 74 75 80 87 90
    131 133 135 137 139 141 143 145 147 149 151 153 155 157
@102 (173)
    on left: 189, on right: 190
@103 (174)
    on left: 191, on right: 192
@104 (175)
    on left: 193, on right: 194
@105 (176)
    on left: 195, on right: 196
@106 (177)
    on left: 197, on right: 198
@107 (178)
    on left: 199, on right: 200
DATATYPE (179)
    on left: 201 202 203 204 205 206, on right: 63 68 70 77 80 83 87


state 0

    0 $accept: . stmt_list $end

    IDENTIFIER  shift, and go to state 1
    IF          shift, and go to state 2
    WHILE       shift, and go to state 3
    REPEAT      shift, and go to state 4
    FOR         shift, and go to state 5
    SWITCH      shift, and go to state 6
    BREAK       shift, and go to state 7
    CONTINUE    shift, and go to state 8
    CONST       shift, and go to state 9
    INT         shift, and go to state 10
    FLOAT       shift, and go to state 11
    BOOL        shift, and go to state 12
    STRING      shift, and go to state 13
    CHAR        shift, and go to state 14
    VOID        shift, and go to state 15
    RETURN      shift, and go to state 16
    LPAREN      shift, and go to state 17
    LBRACE      shift, and go to state 18
    UNARY       shift, and go to state 19
    NOT         shift, and go to state 20

    $end      reduce using rule 5 (stmt_list)
    $default  reduce using rule 66 (func_call)

    stmt_list        go to state 21
    stmt             go to state 22
    return_stmt      go to state 23
    if_stmt          go to state 24
    while_stmt       go to state 25
    repeat_stmt      go to state 26
    for_stmt         go to state 27
    switch_stmt      go to state 28
    func_decl        go to state 29
    func_call        go to state 30
    var_decl         go to state 31
    const_decl       go to state 32
    assignment_stmt  go to state 33
    expr             go to state 34
    DATATYPE         go to state 35


state 1

   65 func_call: IDENTIFIER . @35 LPAREN call_param_list RPAREN
   90 assignment_stmt: IDENTIFIER . @46 ASSIGN @47 TERM SEMICOLON
   93                | IDENTIFIER . @48 ASSIGN @49 expr SEMICOLON
  129 expr: IDENTIFIER . @72 UNARY @73
  187     | IDENTIFIER . @101

    ASSIGN    reduce using rule 88 (@46)
    ASSIGN    [reduce using rule 91 (@48)]
    LPAREN    reduce using rule 64 (@35)
    UNARY     reduce using rule 127 (@72)
    $default  reduce using rule 186 (@101)

    @35   go to state 36
    @46   go to state 37
    @48   go to state 38
    @72   go to state 39
    @101  go to state 40


state 2

   28 if_stmt: IF . @6 LPAREN expr RPAREN LBRACE @7 stmt_list RBRACE @8
   35        | IF . @9 LPAREN expr RPAREN LBRACE @10 stmt_list RBRACE @11 ELSE @12 LBRACE @13 stmt_list RBRACE @14

    LPAREN    reduce using rule 25 (@6)
    LPAREN    [reduce using rule 29 (@9)]
    $default  reduce using rule 25 (@6)

    @6  go to state 41
    @9  go to state 42


state 3

   38 while_stmt: WHILE . @15 LPAREN expr RPAREN LBRACE @16 stmt_list RBRACE

    $default  reduce using rule 36 (@15)

    @15  go to state 43


state 4

   43 repeat_stmt: REPEAT . @17 LBRACE @18 stmt_list RBRACE @19 UNTIL @20 LPAREN expr RPAREN SEMICOLON

    $default  reduce using rule 39 (@17)

    @17  go to state 44


state 5

   49 for_stmt: FOR . @21 LPAREN var_decl expr SEMICOLON IDENTIFIER @22 ASSIGN @23 expr RPAREN LBRACE @24 stmt_list RBRACE @25

    $default  reduce using rule 44 (@21)

    @21  go to state 45


state 6

   53 switch_stmt: SWITCH . @26 LPAREN expr RPAREN LBRACE @27 case_list RBRACE @28

    $default  reduce using rule 50 (@26)

    @26  go to state 46


state 7

   17 stmt: BREAK . SEMICOLON

    SEMICOLON  shift, and go to state 47


state 8

   18 stmt: CONTINUE . SEMICOLON

    SEMICOLON  shift, and go to state 48


state 9

   87 const_decl: CONST . @43 DATATYPE IDENTIFIER @44 ASSIGN @45 TERM SEMICOLON

    $default  reduce using rule 84 (@43)

    @43  go to state 49


state 10

  201 DATATYPE: INT .

    $default  reduce using rule 201 (DATATYPE)


state 11

  205 DATATYPE: FLOAT .

    $default  reduce using rule 205 (DATATYPE)


state 12

  202 DATATYPE: BOOL .

    $default  reduce using rule 202 (DATATYPE)


state 13

  204 DATATYPE: STRING .

    $default  reduce using rule 204 (DATATYPE)


state 14

  203 DATATYPE: CHAR .

    $default  reduce using rule 203 (DATATYPE)


state 15

  206 DATATYPE: VOID .

    $default  reduce using rule 206 (DATATYPE)


state 16

   20 return_stmt: RETURN . @3
   22            | RETURN . @4 TERM
   24            | RETURN . @5 expr

    NUMBER             reduce using rule 21 (@4)
    FLOATING_NUMBER    reduce using rule 21 (@4)
    STRING_LITERAL     reduce using rule 21 (@4)
    CHARACTER_LITERAL  reduce using rule 21 (@4)
    TRUE               reduce using rule 21 (@4)
    FALSE              reduce using rule 21 (@4)
    SEMICOLON          reduce using rule 19 (@3)
    SEMICOLON          [reduce using rule 23 (@5)]
    $default           reduce using rule 23 (@5)

    @3  go to state 50
    @4  go to state 51
    @5  go to state 52


state 17

  158 expr: LPAREN . expr RPAREN

    IDENTIFIER  shift, and go to state 53
    LPAREN      shift, and go to state 17
    UNARY       shift, and go to state 19
    NOT         shift, and go to state 20

    $default  reduce using rule 66 (func_call)

    func_call  go to state 30
    expr       go to state 54


state 18

    4 stmt_list: LBRACE . @1 stmt_list RBRACE @2 stmt_list

    $default  reduce using rule 2 (@1)

    @1  go to state 55


state 19

  126 expr: UNARY . @70 IDENTIFIER @71

    $default  reduce using rule 124 (@70)

    @70  go to state 56


state 20

  157 expr: NOT . @87 TERM
  185     | NOT . LPAREN expr RPAREN

    LPAREN  shift, and go to state 57

    $default  reduce using rule 156 (@87)

    @87  go to state 58


state 21

    0 $accept: stmt_list . $end

    $end  shift, and go to state 59


state 22

    1 stmt_list: stmt . stmt_list

    IDENTIFIER  shift, and go to state 1
    IF          shift, and go to state 2
    WHILE       shift, and go to state 3
    REPEAT      shift, and go to state 4
    FOR         shift, and go to state 5
    SWITCH      shift, and go to state 6
    BREAK       shift, and go to state 7
    CONTINUE    shift, and go to state 8
    CONST       shift, and go to state 9
    INT         shift, and go to state 10
    FLOAT       shift, and go to state 11
    BOOL        shift, and go to state 12
    STRING      shift, and go to state 13
    CHAR        shift, and go to state 14
    VOID        shift, and go to state 15
    RETURN      shift, and go to state 16
    LPAREN      shift, and go to state 17
    LBRACE      shift, and go to state 18
    UNARY       shift, and go to state 19
    NOT         shift, and go to state 20

    $end      reduce using rule 5 (stmt_list)
    CASE      reduce using rule 5 (stmt_list)
    DEFAULT   reduce using rule 5 (stmt_list)
    RBRACE    reduce using rule 5 (stmt_list)
    $default  reduce using rule 66 (func_call)

    stmt_list        go to state 60
    stmt             go to state 22
    return_stmt      go to state 23
    if_stmt          go to state 24
    while_stmt       go to state 25
    repeat_stmt      go to state 26
    for_stmt         go to state 27
    switch_stmt      go to state 28
    func_decl        go to state 29
    func_call        go to state 30
    var_decl         go to state 31
    const_decl       go to state 32
    assignment_stmt  go to state 33
    expr             go to state 34
    DATATYPE         go to state 35


state 23

   16 stmt: return_stmt . SEMICOLON

    SEMICOLON  shift, and go to state 61


state 24

    6 stmt: if_stmt .

    $default  reduce using rule 6 (stmt)


state 25

    7 stmt: while_stmt .

    $default  reduce using rule 7 (stmt)


state 26

    8 stmt: repeat_stmt .

    $default  reduce using rule 8 (stmt)


state 27

    9 stmt: for_stmt .

    $default  reduce using rule 9 (stmt)


state 28

   10 stmt: switch_stmt .

    $default  reduce using rule 10 (stmt)


state 29

   11 stmt: func_decl .

    $default  reduce using rule 11 (stmt)


state 30

  188 expr: func_call .

    $default  reduce using rule 188 (expr)


state 31

   12 stmt: var_decl .

    $default  reduce using rule 12 (stmt)


state 32

   13 stmt: const_decl .

    $default  reduce using rule 13 (stmt)


state 33

   14 stmt: assignment_stmt .

    $default  reduce using rule 14 (stmt)


state 34
